--- a/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
+++ b/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
@@ -1,24 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="BlogExercise" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbI-4z-dsX">
+                                <rect key="frame" x="10" y="164" width="394" height="688"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X8w-UG-YbB">
+                                        <rect key="frame" x="0.0" y="5" width="394" height="683"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="X8w-UG-YbB" firstAttribute="top" secondItem="xbI-4z-dsX" secondAttribute="top" constant="5" id="bKb-Nb-Eig"/>
+                                    <constraint firstAttribute="trailing" secondItem="X8w-UG-YbB" secondAttribute="trailing" id="l3l-cU-ICS"/>
+                                    <constraint firstItem="X8w-UG-YbB" firstAttribute="leading" secondItem="xbI-4z-dsX" secondAttribute="leading" id="pFf-Tq-mNl"/>
+                                    <constraint firstAttribute="bottom" secondItem="X8w-UG-YbB" secondAttribute="bottom" id="uk6-Ze-YKI"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="havasLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="SN6-TK-j91">
+                                <rect key="frame" x="-49" y="44" width="512" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="fen-h4-9rs"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SN6-TK-j91" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Xx5-o1-rcR"/>
+                            <constraint firstItem="xbI-4z-dsX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="YaT-U0-S5w"/>
+                            <constraint firstItem="SN6-TK-j91" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="emX-Fg-Jgq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xbI-4z-dsX" secondAttribute="trailing" constant="10" id="ogo-g1-sLv"/>
+                            <constraint firstItem="xbI-4z-dsX" firstAttribute="top" secondItem="SN6-TK-j91" secondAttribute="bottom" id="sjf-4P-M6d"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xbI-4z-dsX" secondAttribute="bottom" constant="10" id="uL3-ar-bZD"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="20" y="89"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="havasLogo.png" width="512" height="381"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
