--- a/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
+++ b/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
@@ -73,56 +73,72 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="410" height="200"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="havasLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="bXp-tF-BbH">
-                                                                    <rect key="frame" x="7" y="7" width="396" height="186"/>
-                                                                </imageView>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0FN-It-Y0d">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="410" height="200"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="havasLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="bXp-tF-BbH">
+                                                                            <rect key="frame" x="250" y="0.0" width="160" height="200"/>
+                                                                        </imageView>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                    <constraints>
+                                                                        <constraint firstItem="bXp-tF-BbH" firstAttribute="leading" secondItem="0FN-It-Y0d" secondAttribute="leading" constant="250" id="GqY-xR-ofg"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="bXp-tF-BbH" secondAttribute="trailing" id="JfA-fj-1AX"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="bXp-tF-BbH" secondAttribute="bottom" id="Mup-HL-0xz"/>
+                                                                        <constraint firstItem="bXp-tF-BbH" firstAttribute="top" secondItem="0FN-It-Y0d" secondAttribute="top" id="b7Y-gp-ewL"/>
+                                                                    </constraints>
+                                                                </view>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IzX-oU-kna">
-                                                                    <rect key="frame" x="7" y="7" width="220" height="186"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="360" height="200"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="purple_background" translatesAutoresizingMaskIntoConstraints="NO" id="7OP-gy-o8s" userLabel="Background Image">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="220" height="186"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="360" height="200"/>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Long text out of context" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wR-oB-qg4">
-                                                                            <rect key="frame" x="89" y="82" width="58" height="34"/>
-                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jI8-IW-C7E">
+                                                                            <rect key="frame" x="0.0" y="80" width="250" height="120"/>
+                                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                                        </textView>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vj-32-xhv">
+                                                                            <rect key="frame" x="7" y="89.5" width="43.5" height="21"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vj-32-xhv">
-                                                                            <rect key="frame" x="89" y="82" width="42" height="21"/>
-                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXX-5m-lLz">
+                                                                            <rect key="frame" x="7" y="7" width="83" height="21"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                            <nil key="textColor"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXX-5m-lLz">
-                                                                            <rect key="frame" x="89" y="82" width="42" height="21"/>
-                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                            <nil key="textColor"/>
+                                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
                                                                     <constraints>
-                                                                        <constraint firstItem="1wR-oB-qg4" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" constant="89" id="MbH-Qq-TR9"/>
-                                                                        <constraint firstAttribute="bottom" secondItem="7OP-gy-o8s" secondAttribute="bottom" id="Tol-UI-xmL"/>
-                                                                        <constraint firstItem="7OP-gy-o8s" firstAttribute="top" secondItem="IzX-oU-kna" secondAttribute="top" id="Uxf-GU-hWj"/>
-                                                                        <constraint firstAttribute="bottom" secondItem="1wR-oB-qg4" secondAttribute="bottom" constant="70" id="hJ6-YB-ibZ"/>
-                                                                        <constraint firstAttribute="trailing" secondItem="7OP-gy-o8s" secondAttribute="trailing" id="kic-Ix-y1x"/>
-                                                                        <constraint firstAttribute="trailing" secondItem="1wR-oB-qg4" secondAttribute="trailing" constant="73" id="l8H-go-Cc1"/>
-                                                                        <constraint firstAttribute="width" constant="220" id="tgw-GK-LbW"/>
-                                                                        <constraint firstItem="7OP-gy-o8s" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="yoM-hz-cp0"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="7OP-gy-o8s" secondAttribute="bottom" id="4fS-mG-bVi"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="jI8-IW-C7E" secondAttribute="bottom" id="5rr-Oh-mov"/>
+                                                                        <constraint firstItem="jI8-IW-C7E" firstAttribute="top" secondItem="IzX-oU-kna" secondAttribute="top" constant="80" id="9HM-Qq-mnk"/>
+                                                                        <constraint firstItem="7OP-gy-o8s" firstAttribute="top" secondItem="IzX-oU-kna" secondAttribute="top" id="C4D-Z2-sPY"/>
+                                                                        <constraint firstItem="qXX-5m-lLz" firstAttribute="top" secondItem="IzX-oU-kna" secondAttribute="top" constant="7" id="Ckw-C8-MGw"/>
+                                                                        <constraint firstItem="qXX-5m-lLz" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" constant="7" id="GNE-9T-bYb"/>
+                                                                        <constraint firstItem="7OP-gy-o8s" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="GW8-Iq-lPH"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="jI8-IW-C7E" secondAttribute="trailing" constant="110" id="Gem-hm-HhZ"/>
+                                                                        <constraint firstItem="jI8-IW-C7E" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="I7F-qP-CPz"/>
+                                                                        <constraint firstItem="0vj-32-xhv" firstAttribute="centerY" secondItem="IzX-oU-kna" secondAttribute="centerY" id="PZu-pM-XAW"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="7OP-gy-o8s" secondAttribute="trailing" id="Yp7-LD-fS8"/>
                                                                     </constraints>
                                                                 </view>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="IzX-oU-kna" firstAttribute="leading" secondItem="bXp-tF-BbH" secondAttribute="leading" id="DfI-U1-1wF"/>
-                                                                <constraint firstAttribute="trailing" secondItem="bXp-tF-BbH" secondAttribute="trailing" constant="7" id="IPx-es-Z7M"/>
-                                                                <constraint firstItem="bXp-tF-BbH" firstAttribute="leading" secondItem="MwH-zy-1yW" secondAttribute="leading" constant="7" id="LAX-dq-rqO"/>
-                                                                <constraint firstItem="IzX-oU-kna" firstAttribute="bottom" secondItem="bXp-tF-BbH" secondAttribute="bottom" id="NJH-4u-fnA"/>
-                                                                <constraint firstAttribute="bottom" secondItem="bXp-tF-BbH" secondAttribute="bottom" constant="7" id="Sf7-1B-il4"/>
-                                                                <constraint firstItem="bXp-tF-BbH" firstAttribute="top" secondItem="MwH-zy-1yW" secondAttribute="top" constant="7" id="VJ2-5A-XjO"/>
-                                                                <constraint firstItem="IzX-oU-kna" firstAttribute="top" secondItem="bXp-tF-BbH" secondAttribute="top" id="yzf-vZ-wGN"/>
+                                                                <constraint firstAttribute="trailing" secondItem="IzX-oU-kna" secondAttribute="trailing" constant="50" id="4Lc-Fo-MdL"/>
+                                                                <constraint firstItem="0FN-It-Y0d" firstAttribute="top" secondItem="MwH-zy-1yW" secondAttribute="top" id="KFu-8b-sWR"/>
+                                                                <constraint firstAttribute="bottom" secondItem="IzX-oU-kna" secondAttribute="bottom" id="LPm-iz-Tf7"/>
+                                                                <constraint firstAttribute="bottom" secondItem="0FN-It-Y0d" secondAttribute="bottom" id="ZSS-je-JCW"/>
+                                                                <constraint firstAttribute="trailing" secondItem="0FN-It-Y0d" secondAttribute="trailing" id="due-5g-dC5"/>
+                                                                <constraint firstItem="0FN-It-Y0d" firstAttribute="leading" secondItem="MwH-zy-1yW" secondAttribute="leading" id="hGK-I6-rKT"/>
+                                                                <constraint firstItem="0vj-32-xhv" firstAttribute="leading" secondItem="MwH-zy-1yW" secondAttribute="leading" constant="7" id="qqO-vI-FNk"/>
+                                                                <constraint firstItem="IzX-oU-kna" firstAttribute="leading" secondItem="MwH-zy-1yW" secondAttribute="leading" id="uOj-nw-r1f"/>
+                                                                <constraint firstItem="IzX-oU-kna" firstAttribute="top" secondItem="MwH-zy-1yW" secondAttribute="top" id="uus-IZ-1gz"/>
                                                             </constraints>
                                                             <userDefinedRuntimeAttributes>
                                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -132,9 +148,10 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </tableViewCellContentView>
                                                         <connections>
+                                                            <outlet property="backgroundImage" destination="7OP-gy-o8s" id="eL2-qT-SVo"/>
                                                             <outlet property="blogImage" destination="bXp-tF-BbH" id="qpk-S1-xoI"/>
                                                             <outlet property="comentsLabel" destination="qXX-5m-lLz" id="qHL-N0-GU1"/>
-                                                            <outlet property="title" destination="1wR-oB-qg4" id="0xC-Vd-Gjr"/>
+                                                            <outlet property="title" destination="jI8-IW-C7E" id="qSY-53-gxf"/>
                                                             <outlet property="upvotesLabel" destination="0vj-32-xhv" id="nQ3-wP-o7H"/>
                                                         </connections>
                                                     </tableViewCell>
