--- a/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
+++ b/BlogExercise/BlogExercise/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhv-Qo-3Sc">
-                                        <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
+                                        <rect key="frame" x="30" y="100" width="42" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -36,15 +36,24 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWF-sR-yrc">
+                                        <rect key="frame" x="15" y="15" width="34" height="30"/>
+                                        <state key="normal" title="back"/>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="show" id="fTn-7v-Mr4"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstItem="o3S-QE-aeJ" firstAttribute="leading" secondItem="k7d-sq-qVM" secondAttribute="leading" constant="50" id="7f5-2Y-AEi"/>
                                     <constraint firstItem="lo5-A5-3F9" firstAttribute="centerX" secondItem="k7d-sq-qVM" secondAttribute="centerX" id="FyL-Jo-Ai6"/>
+                                    <constraint firstItem="MWF-sR-yrc" firstAttribute="top" secondItem="k7d-sq-qVM" secondAttribute="top" constant="15" id="L1h-OD-QLF"/>
                                     <constraint firstItem="o3S-QE-aeJ" firstAttribute="top" secondItem="k7d-sq-qVM" secondAttribute="top" constant="50" id="S3W-Ay-4E9"/>
-                                    <constraint firstItem="bhv-Qo-3Sc" firstAttribute="leading" secondItem="k7d-sq-qVM" secondAttribute="leading" id="UlL-rT-Oei"/>
+                                    <constraint firstItem="bhv-Qo-3Sc" firstAttribute="leading" secondItem="k7d-sq-qVM" secondAttribute="leading" constant="30" id="UlL-rT-Oei"/>
                                     <constraint firstItem="lo5-A5-3F9" firstAttribute="centerY" secondItem="k7d-sq-qVM" secondAttribute="centerY" id="cv4-Ul-nxC"/>
-                                    <constraint firstItem="bhv-Qo-3Sc" firstAttribute="top" secondItem="k7d-sq-qVM" secondAttribute="top" id="njo-Gd-gv9"/>
+                                    <constraint firstItem="MWF-sR-yrc" firstAttribute="leading" secondItem="k7d-sq-qVM" secondAttribute="leading" constant="15" id="dTL-p4-urM"/>
+                                    <constraint firstItem="bhv-Qo-3Sc" firstAttribute="top" secondItem="k7d-sq-qVM" secondAttribute="top" constant="100" id="njo-Gd-gv9"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -101,11 +110,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="BlogExercise" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f22-nb-UID" userLabel="BackgroundView">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappleLeaf.png" translatesAutoresizingMaskIntoConstraints="NO" id="SlC-Gv-xOi">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
@@ -120,10 +129,10 @@
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbI-4z-dsX" userLabel="MainView">
-                                        <rect key="frame" x="2" y="120" width="410" height="695"/>
+                                        <rect key="frame" x="2" y="120" width="410" height="685"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X8w-UG-YbB" userLabel="Reddit Table View">
-                                                <rect key="frame" x="0.0" y="7" width="410" height="688"/>
+                                                <rect key="frame" x="0.0" y="7" width="410" height="678"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainCell" rowHeight="200" id="exd-ru-4J7" customClass="RedditTableViewCell" customModule="BlogExercise" customModuleProvider="target">
@@ -173,6 +182,19 @@
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
+                                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2H-he-gpy" customClass="FaveButton" customModule="FaveButton">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="45" height="35"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="45" id="JtF-UU-zSu"/>
+                                                                                <constraint firstAttribute="width" secondItem="B2H-he-gpy" secondAttribute="height" multiplier="472:369" id="kKh-0l-1zl"/>
+                                                                            </constraints>
+                                                                            <state key="normal" title="Button" image="fav_button"/>
+                                                                            <userDefinedRuntimeAttributes>
+                                                                                <userDefinedRuntimeAttribute type="color" keyPath="normalColor">
+                                                                                    <color key="value" systemColor="systemYellowColor"/>
+                                                                                </userDefinedRuntimeAttribute>
+                                                                            </userDefinedRuntimeAttributes>
+                                                                        </button>
                                                                     </subviews>
                                                                     <constraints>
                                                                         <constraint firstAttribute="bottom" secondItem="7OP-gy-o8s" secondAttribute="bottom" id="4fS-mG-bVi"/>
@@ -184,8 +206,10 @@
                                                                         <constraint firstItem="7OP-gy-o8s" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="GW8-Iq-lPH"/>
                                                                         <constraint firstAttribute="trailing" secondItem="jI8-IW-C7E" secondAttribute="trailing" constant="110" id="Gem-hm-HhZ"/>
                                                                         <constraint firstItem="jI8-IW-C7E" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="I7F-qP-CPz"/>
+                                                                        <constraint firstItem="B2H-he-gpy" firstAttribute="leading" secondItem="IzX-oU-kna" secondAttribute="leading" id="IIn-qW-Qvt"/>
                                                                         <constraint firstItem="0vj-32-xhv" firstAttribute="centerY" secondItem="IzX-oU-kna" secondAttribute="centerY" id="PZu-pM-XAW"/>
                                                                         <constraint firstAttribute="trailing" secondItem="7OP-gy-o8s" secondAttribute="trailing" id="Yp7-LD-fS8"/>
+                                                                        <constraint firstItem="B2H-he-gpy" firstAttribute="top" secondItem="IzX-oU-kna" secondAttribute="top" id="wJc-X4-y8g"/>
                                                                     </constraints>
                                                                 </view>
                                                             </subviews>
@@ -251,6 +275,7 @@
                             <constraint firstItem="f22-nb-UID" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="VXh-Ia-u2S"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="WR3-o9-y4K"/>
                     <connections>
                         <outlet property="ReditTableView" destination="X8w-UG-YbB" id="xjs-qj-1Kf"/>
                     </connections>
@@ -261,6 +286,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fav_button" width="418" height="369"/>
         <image name="havasLogo.png" width="512" height="381"/>
         <image name="havasLogoWhite.png" width="288" height="288"/>
         <image name="mappleLeaf.png" width="288" height="288"/>
@@ -270,6 +296,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
